devhub-tools/objects/Lead/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>UTM Content</label>
    <type>Text</type>
    <length>255</length>
</CustomField>