devhub-tools/objects/Lead/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Text</type>
    <length>255</length>
</CustomField>