devhub-tools/objects/Lead/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <type>Text</type>
    <length>255</length>
</CustomField>